[Fixed Compare Products section not showing in mobile view under 767px]

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
@@ -1007,8 +1007,7 @@
 }
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
-    .compare.wrapper,
-    [class*='block-compare'] {
+    .compare.wrapper {
         display: none;
     }
     .catalog-product_compare-index {
